Client: Deobfuscate ColorButton and InputTextField classes
No functional changes.